fabric/testdata/out/ing_setanta-spp-orchestrator-staging-reject-http-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      \u0026\u0026 Header(\"X-Forwarded-Proto\", \"http\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(400) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":400,\\\"detail\\\":\\\"TLS
      is required\\\",\\\"type\\\":\\\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\\\"}\")
      -\u003e \u003cshunt\u003e"},"labels":{"controller-uid":"5d644909-2f88-11e9-b826-0a3d2718077c","deployment-id":"d-rzj77h4x8wn7gqnwjt6zh18sh","pipeline-id":"l-25dxnxjs786jap63ehk6141r6o"},"name":"setanta-spp-orchestrator-staging-reject-http-route","namespace":"default"},"spec":{"rules":[{"host":"setanta-spp-orchestrator-staging.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"setanta-spp-orchestrator-staging","servicePort":"http"},"pathType":"ImplementationSp [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") && Header("X-Forwarded-Proto", "http")
      -> unverifiedAuditLog("sub") -> status(400) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":400,\"detail\":\"TLS is required\",\"type\":\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\"}")
      -> <shunt>
  creationTimestamp: "2019-06-17T13:46:38Z"
  generation: 1
  labels:
    controller-uid: 5d644909-2f88-11e9-b826-0a3d2718077c
    deployment-id: d-rzj77h4x8wn7gqnwjt6zh18sh
    pipeline-id: l-25dxnxjs786jap63ehk6141r6o
  name: setanta-spp-orchestrator-staging-reject-http-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: setanta-spp-orchestrator-staging
    uid: 5d644909-2f88-11e9-b826-0a3d2718077c
  resourceVersion: "1357488761"
  uid: 54aba8c9-9106-11e9-a3f0-065b20c8b844
spec:
  rules:
  - host: setanta-spp-orchestrator-staging.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: setanta-spp-orchestrator-staging
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-orchestrator-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: setanta-spp-orchestrator-staging
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
